# sgemm-optimizations

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt
include/: utils.hpp
include/cu/: array.cuh  check.cuh  runner.cuh  timer.cuh
include/kernels/: v1.cuh  v2.cuh  v3.cuh  v4.cuh  v5.cuh  v6.cuh
src/: main.cu  runner.cu
